--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Bookflix - Book Club</title>
+    <title>Bookflix - Английский книжный клуб</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>📚 Bookflix</h1>
-            <p class="subtitle">Your Subscription Book Club</p>
+            <img src="logo.svg" alt="Bookflix" class="logo">
+            <p class="subtitle">английский книжный клуб</p>
         </header>
 
         <main>
             <div class="button-group">
                 <button id="purchaseBtn" class="main-button">
-                    Purchase Subscription
+                    Купить подписку
                 </button>
                 <button id="subscriptionBtn" class="main-button">
-                    My Subscription
+                    Моя подписка
                 </button>
                 <button id="readingRoomBtn" class="main-button">
                     Reading Room
@@ -31,16 +31,14 @@
         <!-- Purchase Subscription Screen -->
         <div id="purchaseScreen" class="screen hidden">
             <div class="screen-header">
-                <button class="back-btn" onclick="showHome()">← Back</button>
-                <h2>Purchase Subscription</h2>
+                <button class="back-btn" onclick="showHome()">← Назад</button>
+                <h2>Купить подписку</h2>
             </div>
             <div class="screen-content">
                 <div id="purchaseContent">
-                    <p>Choose your subscription plan:</p>
+                    <p>Выберите план подписки:</p>
                     <div class="plan-selector">
-                        <button class="plan-btn" onclick="selectPlan(30)">1 Month - 299₽</button>
-                        <button class="plan-btn" onclick="selectPlan(90)">3 Months - 799₽</button>
-                        <button class="plan-btn" onclick="selectPlan(365)">1 Year - 2499₽</button>
+                        <button class="plan-btn" onclick="selectPlan(30)">1 месяц - 299₽</button>
                     </div>
                     <div id="paymentWidget" class="hidden"></div>
                 </div>
@@ -50,12 +48,12 @@
         <!-- My Subscription Screen -->
         <div id="subscriptionScreen" class="screen hidden">
             <div class="screen-header">
-                <button class="back-btn" onclick="showHome()">← Back</button>
-                <h2>My Subscription</h2>
+                <button class="back-btn" onclick="showHome()">← Назад</button>
+                <h2>Моя подписка</h2>
             </div>
             <div class="screen-content">
                 <div id="subscriptionContent">
-                    <div class="loading">Loading subscription status...</div>
+                    <div class="loading">Загрузка статуса подписки...</div>
                 </div>
             </div>
         </div>
@@ -63,12 +61,12 @@
         <!-- Reading Room Screen -->
         <div id="readingRoomScreen" class="screen hidden">
             <div class="screen-header">
-                <button class="back-btn" onclick="showHome()">← Back</button>
+                <button class="back-btn" onclick="showHome()">← Назад</button>
                 <h2>Reading Room</h2>
             </div>
             <div class="screen-content">
                 <div id="readingRoomContent">
-                    <div class="loading">Checking access...</div>
+                    <div class="loading">Проверка доступа...</div>
                 </div>
             </div>
         </div>
@@ -78,9 +76,9 @@
             <div class="screen-content">
                 <div class="confirmation-message">
                     <div class="success-icon">✓</div>
-                    <h2>Payment Successful!</h2>
-                    <p>Your subscription has been activated.</p>
-                    <button class="main-button" onclick="showHome()">Continue</button>
+                    <h2>Оплата успешна!</h2>
+                    <p>Ваша подписка активирована.</p>
+                    <button class="main-button" onclick="showHome()">Продолжить</button>
                 </div>
             </div>
         </div>
