--- a/index.html
+++ b/index.html
@@ -15,6 +15,71 @@
         </header>
 
         <main>
+<div class="featured-carousel">
+    
+    <!-- Slide 1 — Book of the Month -->
+    <div class="featured-slide">
+        <img src="book-of-month.png" class="featured-cover" alt="Книга месяца">
+        <h2 class="featured-title">Книга месяца · Декабрь 2025</h2>
+        <p class="featured-tagline">регулярно читаем книги на английском и прокачиваем словарный запас</p>
+
+        <button class="expand-btn" onclick="toggleDescription('bookDesc')">
+            О чём книга ↓
+        </button>
+
+        <div id="bookDesc" class="featured-description hidden">
+            <p>
+                Друзья, декабрь — это наш месяц уютных традиций. Может, когда-нибудь мы и нарушим правило, 
+                но обычно в это время года хочется ровно того, что мы вам сейчас предложим.
+            </p>
+            <p>
+                Читаем «Двенадцать дней Рождества» Сьюзан Стоукс-Чепмен — роман, который критики описывают 
+                как «Джейн Остин встречает Аббатство Даунтон».
+            </p>
+            <p>
+                Снежная деревушка Мерривэйк. Регентская Англия. Позади — наполеоновские войны, впереди — 
+                самый ожидаемый бал сезона. Но до Двенадцатой ночи ещё двенадцать дней — и каждая глава 
+                таит свою историю.
+            </p>
+            <p>
+                Укутывайтесь в плед, заваривайте чай — и присоединяйтесь к нашей декабрьской традиции. 
+                Обещаем атмосферу теплее глинтвейна у камина.
+            </p>
+        </div>
+    </div>
+
+    <!-- Slide 2 — Magazine Issue -->
+    <div class="featured-slide">
+        <img src="magazine-22.png" class="featured-cover" alt="Журнал №22">
+        <h2 class="featured-title">Bookflix Monthly №22 · The Rooms Issue</h2>
+        <p class="featured-tagline">наш литературный клубный журнал</p>
+
+        <button class="expand-btn" onclick="toggleDescription('magDesc')">
+            О чём выпуск ↓
+        </button>
+
+        <div id="magDesc" class="featured-description hidden">
+            <p><b>Комната, которая помнит твой страх.</b></p>
+            <p>
+                Выпуск о том, что остаётся после прочитанного. О книгах, которые меняют детей навсегда. 
+                О частоте, которую слышат только они.
+            </p>
+            <p>
+                Внутри: архитектура страха, метафоры-следы, слова для сумерек и паранормальное 
+                исследование того, что ты потерял, когда вырос.
+            </p>
+            <p>
+                Редактор номера — Наблюдатель. Тот, кто стоял в углу твоей комнаты, когда ты читал 
+                под одеялом с фонариком.
+            </p>
+            <p><b>Bookflix №22: The Rooms Issue.</b>  
+                Журнал уже отправлен членам клуба с годовым абонементом.
+            </p>
+        </div>
+    </div>
+
+</div>
+
             <div class="button-group">
                 <button id="purchaseBtn" class="main-button">
                     Купить подписку
